Fixed modal overlay z-index order

--- a/src/sass/components/common/_components.fixed-navigation.scss
+++ b/src/sass/components/common/_components.fixed-navigation.scss
@@ -9,7 +9,7 @@ $header-bg-color: $black-1;
   top: -100px;
   height: 80px;
   width: 100%;
-  z-index: 999999;
+  z-index: 9999;
   transition: top 300ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
 
   &--active {
